fix: add outline offset to control elements for visibility

--- a/src/app/shared/components/mediaelement-player/mediaelement-player.component.scss
+++ b/src/app/shared/components/mediaelement-player/mediaelement-player.component.scss
@@ -5,6 +5,13 @@
   .mejs__time-total,
   .mejs__time-slider {
     @include focus-outline;
+
+    .mejs__controls {
+      button,
+      .mejs__time-slider {
+        outline-offset: .25rem;
+      }
+    }
   }
 
   // increase size
